// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with color 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(198,100%,18%,0.32);
  font-family: "Roboto Mono",ui-monospace,SFMono-Regular,Monaco,Consolas,monospace;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  padding: 0px 4px;
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

<div>
  <span
    class="BaseBox-bksIuc  c0"
    data-klear360-component="code"
  >
    <code
      class="c1"
      data-klear360-component="base-text"
      letter-spacing="100"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render Code with default properties 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(218,50%,6%,1);
  font-family: "Roboto Mono",ui-monospace,SFMono-Regular,Monaco,Consolas,monospace;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  padding: 0px 4px;
  background-color: hsla(222,47%,11%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

<div>
  <span
    class="BaseBox-bksIuc  c0"
    data-klear360-component="code"
  >
    <code
      class="c1"
      data-klear360-component="base-text"
      letter-spacing="100"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render isHighlighted false Code 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(216,56%,2%,1);
  font-family: "Roboto Mono",ui-monospace,SFMono-Regular,Monaco,Consolas,monospace;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  padding: 0px 4px;
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

<div>
  <span
    class="BaseBox-bksIuc  c0"
    data-klear360-component="code"
  >
    <code
      class="c1"
      data-klear360-component="base-text"
      letter-spacing="100"
    >
      NON-HIGHLIGHTED
    </code>
  </span>
</div>
`;

exports[`<Code /> should render medium Code 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(218,50%,6%,1);
  font-family: "Roboto Mono",ui-monospace,SFMono-Regular,Monaco,Consolas,monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  padding: 0px 4px;
  background-color: hsla(222,47%,11%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

<div>
  <span
    class="BaseBox-bksIuc  c0"
    data-klear360-component="code"
  >
    <code
      class="c1"
      data-klear360-component="base-text"
      letter-spacing="100"
    >
      MEDIUM
    </code>
  </span>
</div>
`;

exports[`<Code /> should render small Code 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(218,50%,6%,1);
  font-family: "Roboto Mono",ui-monospace,SFMono-Regular,Monaco,Consolas,monospace;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  padding: 0px 4px;
  background-color: hsla(222,47%,11%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

<div>
  <span
    class="BaseBox-bksIuc  c0"
    data-klear360-component="code"
  >
    <code
      class="c1"
      data-klear360-component="base-text"
      letter-spacing="100"
    >
      SMALL
    </code>
  </span>
</div>
`;
